--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="./images/logo.jpg" alt="">
             </div>
             <ul class="menu">
-                <li>關於我們</li>
+                <li>聯絡我們</li>
                 <li>品牌服務
                     <ol>
                         <li></li>
@@ -61,6 +61,19 @@
 
     </div>
     <div class="container">
+        <div class="main">
+
+            <p>EXPLORE</p>
+
+            <div>
+                <div>KYT</div>
+                <div>SUOMY</div>
+                <div>RUFU</div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+
 
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js'></script>
@@ -73,7 +86,7 @@
             pagination: {
                 el: '.swiper-pagination',
             },
-        })        
+        })
     </script>
 </body>
 
