打掉重練辣

--- a/index.html
+++ b/index.html
@@ -5,88 +5,184 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.0/css/bootstrap.min.css' />
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css' />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-12/css/all.css' />
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="me">
+        <a href="#">關於我們</a>
+        <a href="#">品牌服務</a>
+        <a href="#">最新消息</a>
+        <a href="#">經銷店家</a>
+        <a href="#">聯絡我們</a>
+    </div>
     <div class="topheader">
         <div class="header">
             <div class="logoimg">
-                <img src="./images/logo.jpg" alt="">
+                <img src="./images/logo2.png" alt="">
             </div>
-            <ul class="menu">
-                <li>聯絡我們</li>
-                <li>品牌服務
-                    <ol>
-                        <li></li>
-                    </ol>
-                </li>
-                <li>
-                    最新消息
-                </li>
-                <li>經銷店家</li>
-                <li>聯絡我們</li>
-            </ul>
+            <main>
+                <div id="burger" class="hamburger">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </main>
+            <nav class="navbar navbar-expand-lg navbar-light ">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav menu">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">關於我們<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">品牌服務</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">最新消息</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">經銷店家</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">聯絡我們</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </div>
-    <div class="swiper-container">
+    <div class="swiper-container swiper-div2 div2">
         <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <img src="./images/banner/banner1.jpg" alt="">
+            <div class="swiper-slide b1">
             </div>
-            <div class="swiper-slide">
-                <img src="./images/banner/banner2.jpg" alt="">
+            <div class="swiper-slide b2">
             </div>
-            <div class="swiper-slide">
-                <img src="./images/banner/banner3.jpg" alt="">
+            <div class="swiper-slide b3">
             </div>
-            <div class="swiper-slide">
-                <img src="./images/banner/banner4.jpg" alt="">
+            <div class="swiper-slide b4">
             </div>
-            <div class="swiper-slide">
-                <img src="./images/banner/banner5.jpg" alt="">
+            <div class="swiper-slide b5">
+
             </div>
-            <div class="swiper-slide">
-                <img src="./images/banner/banner6.jpg" alt="">
+            <div class="swiper-slide b6">
+
             </div>
-            <div class="swiper-slide">
-                <img src="./images/banner/banner7.jpg" alt="">
+            <div class="swiper-slide b7">
+
             </div>
         </div>
-        <!-- 如果需要分页器 -->
         <div class="swiper-pagination"></div>
 
     </div>
-    <div class="container">
+    <div class="container ">
         <div class="main">
 
-            <p>EXPLORE</p>
+            <h1 class="uper">brands service</h1>
+            <p>品牌服務</p>
+            <div class="brandbox">
+                <div class="service">
+                    <div>
+                        <img src="./images/kyt.png" alt="">
+                        <a class="flut" href="#">World Class Helmet <i class="fas fa-angle-double-right"></i></a>
+                    </div>
+                </div>
+                <div class="service s2">
+                    <div>
+                        <img src="./images/Suomy.png" alt="">
+                        <a class="flut" href="#">be part of the legend <i class="fas fa-angle-double-right"></i></a>
+                    </div>
+                </div>
+                <div class="service s3">
+                    <div>
+                        <img src="./images/rufu.png" alt="">
+                        <a class="flut" href="#">best quality safety <i class="fas fa-angle-double-right"></i></a>
+                    </div>
+                </div>
 
-            <div>
-                <div>KYT</div>
-                <div>SUOMY</div>
-                <div>RUFU</div>
+
+
+            </div>
+        </div>
+    </div>
+    <div class="div3">
+        <div class="container">
+            <h3>ABOUT US</h3>
+            <h1>關於明峰</h1>
+            <p>明峰企業社在1976年成立於台南縣官田鄉，初期以貿易商形式為公司業務主軸。 隨著台灣機車使用人口的增加，1985年決心投入機車用安全帽產業，因此更名為明峰製帽有限公司。 1997年6月台灣立法通過騎機車強制戴安全帽之法令後，為了提升自我本身製帽的競爭力，毅然決然退出國內內銷市場，轉而跟國外安全帽公司合作，以OEM代工為主，學習為輔，提升自我製帽能力。
+
+            </p>
+            <p>2006年，開始與印尼PT TARA CITRA KUSUMA安全帽製造商合作，承接了世界各大廠安全帽廠的複合纖維帽殼代工，也是國內少數使用預浸布複合材成型的廠商。2010年投入棒球運動安全帽生產的行列，以MLB美國大聯盟各大品牌OEM為主，並且為台灣唯一擁有機車用安全帽與美國SEI棒球帽測試實驗室的製造商。</p>
+        </div>
+    </div>
+    <div class="div4">
+        <h1>注目帽款</h1>
+        <div class="swiper-container swiper-div4">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide p1"></div>
+                <div class="swiper-slide p2"></div>
+                <div class="swiper-slide p3"></div>
+                <div class="swiper-slide p4"></div>
+                <div class="swiper-slide p5"></div>
+                <div class="swiper-slide p6"></div>
+                <div class="swiper-slide p7"></div>
+                <div class="swiper-slide p8"></div>
+                <div class="swiper-slide p9"></div>
+                <div class="swiper-slide p10"></div>
+                <div class="swiper-slide p11"></div>
+                <div class="swiper-slide p12"></div>
+                <div class="swiper-slide p13"></div>
+                <div class="swiper-slide p14"></div>
             </div>
         </div>
     </div>
     <div class="footer">
-
+        <div class="container">
+            <p>台南市官田區富強路14號</p>
+            <p>TEL/+886-6-6982553</p>
+            <p>FAX/+886-6-6987133</p>
+        </div>
 
     </div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js'></script>
     <script>
-        var mySwiper = new Swiper('.swiper-container', {
-            loop: true, // 循环模式选项
+        var mySwiper = new Swiper('.swiper-div2', {
+            loop: true,
 
-            // 如果需要分页器
+
             pagination: {
                 el: '.swiper-pagination',
             },
         })
+
+
+
+
+        var swiper2 = new Swiper('.swiper-div4', {
+            effect: 'coverflow',
+            grabCursor: true,
+            centeredSlides: true,
+            slidesPerView: 'auto',
+            coverflowEffect: {
+                rotate: 50,
+                stretch: -100,
+                depth: 100,
+                modifier: 1,
+                slideShadows: true,
+            },
+        });
+        $(document).ready(function() {
+            $(".hamburger").click(function() {
+                $(this).toggleClass("open");
+                $('.me').toggleClass("active");
+            });
+        });
     </script>
 </body>
 
